--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       <button class="task2">Task 2</button>
       <button class="task3">Task 3</button>
       <button class="reload">RELOAD</button>
+      
     </div>
+    <ul class="output"></ul>
+    
     <script src="./js/task1.js" type="module"></script>
     <script src="./js/task2.js" type="module"></script>
     <script src="./js/task3.js" type="module"></script>
